--- a/modules/css/common.scss
+++ b/modules/css/common.scss
@@ -103,7 +103,7 @@
 #connections, #lookout {
   display: flex;
   align-items: center;
-  width: calc(100% - $deckDiscardSize);
+  width: calc(100% - $deckDiscardSize - 5px); // left margin is 5px
   justify-content: center;
   gap: 5px;
 
@@ -113,7 +113,7 @@
 }
 
 #connections {
-  gap: 20px;
+  gap: 10px;
 }
 
 #lastRound {
