--- a/modules/css/hand.scss
+++ b/modules/css/hand.scss
@@ -75,6 +75,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+  margin-left: 5px;
 
   #deckBlock, #discardBlock {
     display: flex;
