--- a/modules/css/location.scss
+++ b/modules/css/location.scss
@@ -75,11 +75,7 @@
 }
 
 #hand:not(#hand.notTooManyChildren) .locationWrapper {
-  @for $items from 7vw through 50vw {
-    &[data-items="#{string.slice("#{$items}", 1, -3)}"] {
-      width: max(1vw, calc((17vw - $items)));
-    }
-  }
+  width: 2vw;
 
   &:last-child {
     width: auto;
